# projetDIGA

./: CMakeLists.txt  Taquin_french.ts  dialognewgame.cpp  dialognewgame.h  dialognewgame.ui  gamewidget.cpp  gamewidget.cpp.autosave  gamewidget.h  gamewidget.h.autosave  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.h.autosave  testsave.save  tp1_english.ts  tp1_french.ts
